--- a/examples/iterators-and-streams.ipynb
+++ b/examples/iterators-and-streams.ipynb
@@ -181,6 +181,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Branching Sequences\n",
+    "\n",
+    "Sometimes we want to do multiple things with an infinite sequence.  This is where the Python iterator abstraction starts to feel awkward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import logging\n",
+    "from collections import deque\n",
+    "\n",
+    "seq = infinite_data()\n",
+    "seq = map(json.loads, data)\n",
+    "\n",
+    "seq1, seq2 = itertools.tee(seq, 2)\n",
+    "\n",
+    "seq1 = toolz.pluck('value', seq1)  # what we did before\n",
+    "seq1 = toolz.accumulate(add, seq1)\n",
+    "\n",
+    "last_three = deque(maxlen=3)\n",
+    "seq2 = map(last_three.append, seq2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "deque([{'name': 'Alice', 'value': 1}], maxlen=3)\n",
+      "3\n",
+      "deque([{'name': 'Alice', 'value': 1}, {'name': 'Bob', 'value': 2}], maxlen=3)\n",
+      "6\n",
+      "deque([{'name': 'Alice', 'value': 1}, {'name': 'Bob', 'value': 2}, {'name': 'Alice', 'value': 3}], maxlen=3)\n",
+      "10\n",
+      "deque([{'name': 'Bob', 'value': 2}, {'name': 'Alice', 'value': 3}, {'name': 'Alice', 'value': 4}], maxlen=3)\n",
+      "15\n",
+      "deque([{'name': 'Alice', 'value': 3}, {'name': 'Alice', 'value': 4}, {'name': 'Charlie', 'value': 5}], maxlen=3)\n",
+      "21\n",
+      "deque([{'name': 'Alice', 'value': 4}, {'name': 'Charlie', 'value': 5}, {'name': 'Bob', 'value': 6}], maxlen=3)\n",
+      "28\n",
+      "deque([{'name': 'Charlie', 'value': 5}, {'name': 'Bob', 'value': 6}, {'name': 'Alice', 'value': 7}], maxlen=3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        item = next(seq1)\n",
+    "        print(item)\n",
+    "    \n",
+    "        next(seq2)\n",
+    "        print(last_three)\n",
+    "        \n",
+    "    except StopIteration:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Also want\n",
+    "\n",
+    "-  Handle multiple incoming streams with joins\n",
+    "-  Perform time-window operations like \"group by 50 ms\" or \"slow down input stream, I'm swamped\"\n",
+    "-  ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Streams\n",
     "=====\n",
     "\n",
@@ -189,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -219,26 +304,29 @@
     {
      "data": {
       "text/plain": [
-       "<streams.core.Sink at 0x7fc06cb8f630>"
+       "<streams.core.Sink at 0x7f25000b9b00>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Simple linear stream\n",
     "source = Stream()\n",
     "stream = (source.map(json.loads)\n",
     "                .map(lambda x: x['value'])\n",
     "                .scan(add))\n",
+    "\n",
+    "# Two actions whenever a value comes through\n",
     "stream.sink(print)\n",
     "stream.sink(L.append)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +362,7 @@
        "[3, 6, 10, 15, 21, 28]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -305,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +404,7 @@
        "[3, 6, 10, 15, 21, 28, 128]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,20 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dask\n",
-    "===="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from dask.distributed import Client\n",
-    "client = Client(processes=False)"
+    "## Easy to add on new components"
    ]
   },
   {
@@ -355,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "<streams.core.Sink at 0x7fc048955240>"
+       "<streams.core.Sink at 0x7f25000b9cf8>"
       ]
      },
      "execution_count": 18,
@@ -364,14 +439,7 @@
     }
    ],
    "source": [
-    "source = Stream()\n",
-    "s = (source.to_dask()\n",
-    "           .scatter()\n",
-    "           .map(json.loads)\n",
-    "           .map(lambda x: x['value'])\n",
-    "           .scan(add)\n",
-    "           .gather())\n",
-    "s.sink(print)"
+    "stream.sliding_window(2).sink(print)"
    ]
   },
   {
@@ -385,93 +453,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "6\n",
-      "10\n",
-      "15\n",
-      "21\n",
-      "28\n"
+      "129\n",
+      "131\n",
+      "(129, 131)\n",
+      "134\n",
+      "(131, 134)\n",
+      "138\n",
+      "(134, 138)\n",
+      "143\n",
+      "(138, 143)\n",
+      "149\n",
+      "(143, 149)\n",
+      "156\n",
+      "(149, 156)\n"
      ]
     }
    ],
    "source": [
     "for line in data:\n",
     "    source.emit(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "128\n",
-      "228\n",
-      "328\n",
-      "428\n",
-      "528\n",
-      "628\n",
-      "728\n",
-      "828\n",
-      "928\n",
-      "1028\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    source.emit('{\"name\": \"Charlie\", \"value\": 100}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1128\n",
-      "1228\n",
-      "1328\n",
-      "1428\n",
-      "1528\n",
-      "1628\n",
-      "1728\n",
-      "1828\n",
-      "1928\n",
-      "2028\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tornado import gen\n",
-    "@gen.coroutine\n",
-    "def f():\n",
-    "    for i in range(10):\n",
-    "        yield source.emit('{\"name\": \"Charlie\", \"value\": 100}')  # waits until sinks are ready\n",
-    "        \n",
-    "client.loop.add_callback(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Questions\n",
-    "======\n",
-    "\n",
-    "1.  Do we have current or upcoming use cases for this that we could use to drive development?\n",
-    "2.  Do we know what standard practice is today?\n",
-    "3.  Do we know Python users that are likely to give this a shot and provide feedback?\n"
    ]
   }
  ],
