--- a/examples/iterators-and-streams.ipynb
+++ b/examples/iterators-and-streams.ipynb
@@ -280,7 +280,7 @@
    },
    "outputs": [],
    "source": [
-    "from streams import Stream"
+    "from dask_streams import Stream"
    ]
   },
   {
