REL: dask_streams -> streams

--- a/examples/fibonacci.ipynb
+++ b/examples/fibonacci.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "from dask_streams import Stream\n",
+    "from streamz import Stream\n",
     "source = Stream()\n",
     "\n",
     "s = source.sliding_window(2).map(sum)\n",
