--- a/examples/iterators-and-streams.ipynb
+++ b/examples/iterators-and-streams.ipynb
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Streams\n",
+    "Streamz\n",
     "=====\n",
     "\n",
     "Same applications, just a different way of thinking about controlling data."
@@ -280,7 +280,7 @@
    },
    "outputs": [],
    "source": [
-    "from streams import Stream"
+    "from streamz import Stream"
    ]
   },
   {
@@ -304,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "<streams.core.Sink at 0x7f25000b9b00>"
+       "<streamz.core.Sink at 0x7f25000b9b00>"
       ]
      },
      "execution_count": 13,
@@ -430,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "<streams.core.Sink at 0x7f25000b9cf8>"
+       "<streamz.core.Sink at 0x7f25000b9cf8>"
       ]
      },
      "execution_count": 18,
