Update for hvplot

--- a/examples/dataframes.ipynb
+++ b/examples/dataframes.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamz.dataframe import Random, DataFrame"
+    "from streamz.dataframe import Random, DataFrame\n",
+    "# this example requires hvplot\n",
+    "import hvplot.streamz"
    ]
   },
   {
@@ -38,8 +40,9 @@
     "p = (DataFrame({'raw': sdf.x,\n",
     "                        'smooth': sdf.x.rolling('100ms').mean(),\n",
     "                        'very-smooth': sdf.x.rolling('500ms').mean()})\n",
-    "     .plot(width=700)\n",
-    "    )"
+    "     .hvplot(width=700)\n",
+    "    )\n",
+    "p"
    ]
   },
   {
@@ -66,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
