--- a/examples/river_kmeans.ipynb
+++ b/examples/river_kmeans.ipynb
@@ -10,16 +10,13 @@
     "import random\n",
     "\n",
     "import pandas as pd\n",
-    "import tornado.ioloop\n",
     "\n",
     "from streamz import Stream\n",
     "import hvplot.streamz\n",
     "from streamz.river import RiverTrain\n",
     "from river import cluster\n",
     "import holoviews as hv\n",
-    "import panel as pn\n",
     "from panel.pane.holoviews import HoloViews\n",
-    "import tornado.ioloop\n",
     "hv.extension('bokeh')"
    ]
   },
@@ -30,13 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = cluster.STREAMKMeans(n_clusters=3)\n",
+    "model = cluster.KMeans(n_clusters=3, sigma=0.1, mu=0.5)\n",
     "centres = [[random.random(), random.random()] for _ in range(3)]\n",
     "\n",
-    "def gen(split_chance=0.01):\n",
+    "def gen(move_chance=0.05):\n",
     "    centre = int(random.random() * 3)  # 3x faster than random.randint(0, 2)\n",
-    "    if random.random() < split_chance:\n",
-    "        centres[centre] = [random.random(), random.random()]\n",
+    "    if random.random() < move_chance:\n",
+    "        centres[centre][0] += random.random() / 5 - 0.1\n",
+    "        centres[centre][1] += random.random() / 5 - 0.1\n",
     "    value = {'x': random.random() / 20 + centres[centre][0],\n",
     "             'y': random.random() / 20 + centres[centre][1]}\n",
     "    return value\n",
@@ -55,22 +53,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Stream.from_periodic(gen, 0.05)\n",
+    "s = Stream.from_periodic(gen, 0.03)\n",
     "km = RiverTrain(model, pass_model=True)\n",
     "s.map(lambda x: (x,)).connect(km)  # learn takes a tuple of (x,[ y[, w]])\n",
     "ex = pd.DataFrame({'x': [0.5], 'y': [0.5]})\n",
     "ooo = s.map(lambda x: pd.DataFrame([x])).to_dataframe(example=ex)\n",
     "out = km.map(get_clusters)\n",
-    "s.emit(gen())  # set initial model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c24d2363",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# start things\n",
+    "s.emit(gen())  # set initial model\n",
     "for i, (x, y) in enumerate(centres):\n",
     "    model.centers[i]['x'] = x\n",
     "    model.centers[i]['y'] = y\n"
@@ -83,20 +74,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.start()"
+    "pout = out.to_dataframe(example=ex)\n",
+    "pl = (ooo.hvplot.scatter('x', 'y', color=\"blue\", backlog=50) *\n",
+    "      pout.hvplot.scatter('x', 'y', color=\"red\", backlog=3))\n",
+    "pl.opts(xlim=(-0.2, 1.2), ylim=(-0.2, 1.2), height=600, width=600)\n",
+    "pl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f356afa",
+   "id": "c24d2363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pout = out.to_dataframe(example=ex)\n",
-    "pl = (ooo.hvplot.scatter('x', 'y', color=\"blue\", backlog=100) * \n",
-    "      pout.hvplot.scatter('x', 'y', color=\"red\", backlog=3))\n",
-    "pl.opts(xlim=(-0.5, 1.5), ylim=(-0.5, 1.5), height=600, width=600)"
+    "s.start()"
    ]
   },
   {
@@ -108,6 +100,14 @@
    "source": [
     "s.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4537495c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
