Transfer to notebook

--- a/examples/river_kmeans.ipynb
+++ b/examples/river_kmeans.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import functools\n",
     "import random\n",
+    "import time\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -17,6 +19,7 @@
     "from river import cluster\n",
     "import holoviews as hv\n",
     "from panel.pane.holoviews import HoloViews\n",
+    "import panel as pn\n",
     "hv.extension('bokeh')"
    ]
   },
@@ -29,6 +32,7 @@
    "source": [
     "model = cluster.KMeans(n_clusters=3, sigma=0.1, mu=0.5)\n",
     "centres = [[random.random(), random.random()] for _ in range(3)]\n",
+    "count = [0]\n",
     "\n",
     "def gen(move_chance=0.05):\n",
     "    centre = int(random.random() * 3)  # 3x faster than random.randint(0, 2)\n",
@@ -37,6 +41,7 @@
     "        centres[centre][1] += random.random() / 5 - 0.1\n",
     "    value = {'x': random.random() / 20 + centres[centre][0],\n",
     "             'y': random.random() / 20 + centres[centre][1]}\n",
+    "    count[0] += 1\n",
     "    return value\n",
     "\n",
     "\n",
@@ -53,18 +58,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Stream.from_periodic(gen, 0.03)\n",
+    "cadance = 0.01\n",
+    "\n",
+    "ex = pd.DataFrame({'x': [0.5], 'y': [0.5]})\n",
+    "pipe_in = hv.streams.Pipe(data=ex)\n",
+    "pipe_out = hv.streams.Pipe(data=ex)\n",
+    "\n",
+    "# setup pipes\n",
+    "s = Stream.from_periodic(gen, cadance)\n",
+    "\n",
+    "# Branch 0: Input/Observations\n",
+    "obs = s.map(lambda x: pd.DataFrame([x]))\n",
+    "\n",
+    "# Branch 1: Output/River ML clusters\n",
     "km = RiverTrain(model, pass_model=True)\n",
     "s.map(lambda x: (x,)).connect(km)  # learn takes a tuple of (x,[ y[, w]])\n",
-    "ex = pd.DataFrame({'x': [0.5], 'y': [0.5]})\n",
-    "ooo = s.map(lambda x: pd.DataFrame([x])).to_dataframe(example=ex)\n",
-    "out = km.map(get_clusters)\n",
+    "clusters = km.map(get_clusters)\n",
+    "\n",
+    "concat = functools.partial(pd.concat, ignore_index=True)\n",
+    "\n",
+    "def accumulate(previous, new, last_lines=50):\n",
+    "    return concat([previous, new]).iloc[-last_lines:, :]\n",
+    "\n",
+    "partition_obs = 10\n",
+    "particion_clusters = 10\n",
+    "backlog_obs = 100\n",
+    "\n",
+    "# .partition is used to gather x number of points\n",
+    "# before sending them to the plots\n",
+    "# .accumulate allows to generate a backlog\n",
+    "\n",
+    "(\n",
+    "    obs\n",
+    "    .partition(partition_obs)\n",
+    "    .map(concat)\n",
+    "    .accumulate(functools.partial(accumulate, last_lines=backlog_obs))\n",
+    "    .sink(pipe_in.send)\n",
+    ")\n",
+    "(\n",
+    "    clusters\n",
+    "    .partition(particion_clusters)\n",
+    "    .map(pd.concat)\n",
+    "    .sink(pipe_out.send)\n",
+    ")\n",
     "\n",
     "# start things\n",
     "s.emit(gen())  # set initial model\n",
     "for i, (x, y) in enumerate(centres):\n",
     "    model.centers[i]['x'] = x\n",
-    "    model.centers[i]['y'] = y\n"
+    "    model.centers[i]['y'] = y"
    ]
   },
   {
@@ -74,31 +116,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pout = out.to_dataframe(example=ex)\n",
-    "pl = (ooo.hvplot.scatter('x', 'y', color=\"blue\", backlog=50) *\n",
-    "      pout.hvplot.scatter('x', 'y', color=\"red\", backlog=3))\n",
+    "button_start = pn.widgets.Button(name='Start')\n",
+    "button_stop = pn.widgets.Button(name='Stop')\n",
+    "\n",
+    "t0 = 0\n",
+    "\n",
+    "def start(event):\n",
+    "    s.start()\n",
+    "    global t0\n",
+    "    t0 = time.time()\n",
+    "\n",
+    "def stop(event):\n",
+    "    print(count, \"events\")\n",
+    "    global t0\n",
+    "    t_spent = time.time() - t0\n",
+    "    print(\"frequency\", count[0] / t_spent, \"Hz\")\n",
+    "    print(\"Current centres\", centres)\n",
+    "    print(\"Output centres\", [list(c.values()) for c in model.centers.values()])\n",
+    "    s.stop()\n",
+    "\n",
+    "button_start.on_click(start)\n",
+    "button_stop.on_click(stop)\n",
+    "\n",
+    "scatter_dmap_input = hv.DynamicMap(hv.Scatter, streams=[pipe_in]).opts(color=\"blue\")\n",
+    "scatter_dmap_output = hv.DynamicMap(hv.Scatter, streams=[pipe_out]).opts(color=\"red\")\n",
+    "pl = scatter_dmap_input * scatter_dmap_output\n",
     "pl.opts(xlim=(-0.2, 1.2), ylim=(-0.2, 1.2), height=600, width=600)\n",
-    "pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c24d2363",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18cfd94e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.stop()"
+    "\n",
+    "pan = HoloViews(pl)\n",
+    "app = pn.Row(pn.Column(button_start, button_stop), pan)\n",
+    "app"
    ]
   },
   {
